# AutoResearch

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  test.py
.github/workflows/: ci.yml
autoresearch/: __init__.py  default_config.py
autoresearch/agents/: __init__.py
autoresearch/analyze/: __init__.py  assemble.py  harvest.py
autoresearch/common/: scoring.py  sw_sector_map.py  uzi_lenses.py  vol_series.py
autoresearch/data/: akshare_universe.py  cache.py  endpoints.py  features.py  handler.py  harvest.py  keyless.py  migrate_cache.py  sources.py  tushare_enrich.py  tushare_source.py
autoresearch/dataflows/: alpha_vantage.py  alpha_vantage_common.py  alpha_vantage_indicator.py  alpha_vantage_news.py  alpha_vantage_stock.py  config.py  errors.py  fred.py  interface.py  market_data_validator.py  polymarket.py  reddit.py  stockstats_utils.py  stocktwits.py  utils.py  y_finance.py  yfinance_news.py
autoresearch/learning/: channel_ledger.py  feedback_store.py  retro.py  self_review.py  stage_eval.py
autoresearch/macro/: __init__.py  assemble.py  harvest.py  tushare_macro.py
autoresearch/models/: __init__.py  _gbdt_features.py  _torch_util.py  attn.py  base.py  cat.py  catalog.py  dbl.py  gbdt.py  graph.py  linear.py  mlp.py  registry.py  rnn.py  tabnet.py  tcn.py  trainer.py  xgb.py  zoo.py
scripts/: assemble_macro.py  assemble_report.py  assemble_scan.py  factor_lab.py  feedback_store.py  harvest_context.py  harvest_macro.py  retro.py  scan_pipeline.py  screen_market.py  self_review.py  stage_eval.py  tushare_enrich.py  tushare_macro.py  tushare_source.py  uzi_lenses.py
tests/: conftest.py  test_alpha_vantage_hardening.py  test_assemble_macro.py  test_dataflows_config.py  test_date_boundaries.py  test_env_overrides.py  test_fred.py  test_harvest_macro.py  test_instrument_identity.py  test_market_data_validator.py  test_news_lookahead.py  test_no_data_handling.py  test_polymarket.py  test_reddit_fallback.py  test_safe_ticker_component.py  test_stockstats_date_column.py  test_stocktwits_resilience.py  test_symbol_utils.py  test_vendor_errors.py  test_vendor_routing.py  test_yfinance_stale_ohlcv_guard.py
(+136 files in other folders)
