[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch"
version = "0.2.5"
description = "AutoResearch: Multi-Agent LLM Financial Trading Research Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Free data layer only. The paid-LLM multi-agent path was removed; the
    # multi-agent analysis runs in-session via the analyze-ticker skill (Claude
    # as the engine), so no LLM-provider / LangGraph / CLI deps are needed.
    "langchain-core>=0.3.81",   # only for the @tool decorator on the data tools
    "pandas>=2.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "typing-extensions>=4.14.0",
    "yfinance>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=8.0",
    "pytest-subtests>=0.13",
]

[tool.setuptools.packages.find]
include = ["autoresearch*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["results", "worklog"]

[tool.ruff.lint]
# Standard "good defaults" rule set (pyflakes + pycodestyle + isort + bugbear +
# pyupgrade + comprehensions/simplify). Line length (E501) and layout are owned
# by the formatter; whole-repo `ruff format` adoption is deferred until the
# open-PR backlog clears, to avoid mass merge conflicts.
select = ["E", "W", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]   # intentional re-exports

[tool.ruff.lint.isort]
# Keep multiple aliased names from one module in a single combined import block
# (e.g. the vendor re-exports in interface.py) instead of one statement per name.
combine-as-imports = true
